Fix death
- Fixed ice sheet collision - broken into 3 spheres for better fidelity
- Added death note to pause menu and implement
  exiting (pausing) on death

--- a/assets/main.css
+++ b/assets/main.css
@@ -13,6 +13,7 @@ body {
 
 .title {
     text-align: center;
+    font-size: 20px;
 }
 
 .signature {
@@ -49,7 +50,7 @@ body {
     left: 0;
     top: 0;
     background: black;
-    opacity: 0.6; /*ok so that can't be overriden it seems...*/
+    opacity: 0.7; /*ok so that can't be overriden it seems...*/
     color: white;
     font-size: 32px;
     display: none;
